Add feature: Filter products by text and category, Multilingual support, Add RoleController for retriving Role data

--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -1,9 +1,12 @@
 user.login.login_successfully=Đăng nhập thành công
 user.login.login_failed=Đăng nhập không thành công: {0}
-user.register.password_not_match=Mật khẩu không khớp
-user.login.wrong_phone_password=Sai tên hoặc mật khẩu
 user.login.role_not_exist=Role không tồn tại
 user.login.user_is_locked=Tài khoản bị khóa
+user.register.password_not_match=Mật khẩu không khớp
+user.login.wrong_phone_password=Sai tên hoặc mật khẩu
+user.register.phone_existing=Số điện thoại đã tồn tại
+
+
 
 category.create_category.create_successfully=Tạo danh mục thành công
 category.delete_category.delete_successfully=Xóa danh mục với mã: {0} thành công
