Update: Order and Product feature - Update backend logic for create new Order - Added API endpoint 'product/by-ids' - Added CartItemDTO - Changed some properties in Order, OrderDTO, OrderResponse

--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -20,3 +20,4 @@ order.delete_order_detail.delete_successfully=Xóa chi tiết đơn hàng với 
 product.upload_images.error_max_5_images=Bạn chỉ có thể tải tối đa 5 hình ảnh
 product.upload_images.file_large=Tập tin quá lớn! Kích thước tối đa là 10MB
 product.upload_images.file_must_be_image=Tập tin phải là hình ảnh
+product.find_by_id_not_found=Không tìm thấy sản phẩm với id {0}
