Feat: Add update user feature

--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -5,6 +5,7 @@ user.login.user_is_locked=Tài khoản bị khóa
 user.register.password_not_match=Mật khẩu không khớp
 user.login.wrong_phone_password=Sai tên hoặc mật khẩu
 user.register.phone_existing=Số điện thoại đã tồn tại
+user.find_by_id.not_found=Không tìm thấy người dùng với id: {0}
 
 
 
