--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -5,6 +5,7 @@ user.login.role_not_exist=Role does not exist
 user.register.password_not_match=Password does not match
 user.login.user_is_locked=User is locked
 user.register.phone_existing=Phone number already exists
+user.find_by_id.not_found=Cannot find user by id: {0}
 
 category.create_category.create_successfully=Insert category successfully
 category.delete_category.delete_successfully=Delete category with id: {0} successfully
