--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -15,8 +15,19 @@ category.create_category.create_failed=Failed to create new category
 
 order.delete_order.delete_successfully=Delete order with id: {0} successfully
 order.delete_order_detail.delete_successfully=Delete order detail with id: {0} successfully
+order.find_by_id_successfully=Find order by id: {0} successfully
+order.create_successfully=Create order successfully
+order.find_by_user_id_successfully=Find order with user_id: {0} successfully
 
 product.upload_images.error_max_5_images=You can only upload maximum 5 images
 product.upload_images.file_large=File is too large! Maximum size is 10MB
 product.upload_images.file_must_be_image=File must be an image
+product_image.upload_successfully=Upload product image successfully
+product_image.delete_successfully=Delete product image successfully
 product.find_by_id_not_found=Product with id {0} not found
+product.create_successfully=Product create successfully
+product.find_by_keyword_successfully=Find product by keyword "{0}" successfully
+product.find_by_ids_successfully=Find product by ids successfully
+product.find_by_id_successfully=Find product with id: {0} successfully
+product.delete_by_id_successfully=Delete product with id: {0} successfully
+product.update_by_id_successfully=Update product with id: {0} successfully
