--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -17,8 +17,19 @@ category.create_category.create_failed=Lỗi khi thêm danh mục mới
 
 order.delete_order.delete_successfully=Xóa đơn hàng với mã: {0} thành công
 order.delete_order_detail.delete_successfully=Xóa chi tiết đơn hàng với mã: {0} thành công
+order.find_by_id_successfully=Tìm đơn hàng với id: {0} thành công
+order.create_successfully=Tạo đơn hàng thành công
+order.find_by_user_id_successfully=Tìm đơn hàng bằng user_id: {0} thành công
 
 product.upload_images.error_max_5_images=Bạn chỉ có thể tải tối đa 5 hình ảnh
 product.upload_images.file_large=Tập tin quá lớn! Kích thước tối đa là 10MB
 product.upload_images.file_must_be_image=Tập tin phải là hình ảnh
+product_image.upload_successfully=Tải ảnh sản phẩm thành công
+product_image.delete_successfully=Xóa ảnh sản phẩm thành công
 product.find_by_id_not_found=Không tìm thấy sản phẩm với id {0}
+product.create_successfully=Sản phẩm được tạo thành công
+product.find_by_keyword_successfully=Tìm sản phẩm bằng từ khóa "{0}" thành công
+product.find_by_ids_successfully=Tìm sản phẩm bằng ids thành công
+product.find_by_id_successfully=Tìm sản phẩm với id: {0} thành công
+product.delete_by_id_successfully=Xóa sản phẩm với id: {0} thành công
+product.update_by_id_successfully=Cập nhật sản phẩm với id: {0} thành công
